# idk

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: Animation.hpp  DeadMessage.hpp  Enemy.hpp  Entity.hpp  EntityUpdateParams.hpp  Game.hpp  HealthDisplay.hpp  LivingEntity.hpp  LivingEntityTakeDamageParams.hpp  PausedMessage.hpp  Player.hpp
include/Animation/: Explosion.hpp  FadingOutParticle.hpp  Particle.hpp
src/: DeadMessage.cpp  Enemy.cpp  Game.cpp  HealthDisplay.cpp  PausedMessage.cpp  Player.cpp  main.cpp
src/Animation/: Explosion.cpp  FadingOutParticle.cpp  Particle.cpp
